--- a/docs/assets/css/style.css
+++ b/docs/assets/css/style.css
@@ -55,7 +55,7 @@ a {
 /** Header **/
 header {
     width: 100vw;
-    height: 50vh;
+    height: 55vh;
     background-image: url('../img/background.jpg');
     background-size: cover;
 }
@@ -228,17 +228,30 @@ button {
 #searchedMovies .poster {
     margin: 1rem 0;
     position: relative;
+    border-radius: 4px;
+    font-size: 14px;
 }
 
-#searchedMovies .poster .fa-bookmark {
+#searchedMovies .poster a .score{
+    color: #fff;
+    font-weight: bold;
     position: absolute;
-    top: 3%;
-    right: 3%;
+    top: 5%;
+    left: 12%;
+    font-size: 16px;
 }
 
-#searchedMovies .poster img {
+#searchedMovies .poster a .score .fa-star{
+    color: #facc15;
+    font-size: 17px;
+    margin-right: 4px;
+}
+
+#searchedMovies .poster a img {
     width: 100%;
     height: 100%;
+    border-radius: 4px;
+    box-shadow: 0px 0px 15px -2px rgba(0,0, 0,0.30);
     object-fit: cover;
 }
 
@@ -248,6 +261,12 @@ button {
 
 main {
     padding: 2rem 0;
+}
+
+#moviePoster img{
+    width: 100%;
+    border-radius: 4px;
+    box-shadow: 0px 0px 15px -2px rgba(0,0, 0,0.30);
 }
 
 
