--- a/docs/assets/css/style.css
+++ b/docs/assets/css/style.css
@@ -27,6 +27,14 @@ h3 {
     margin-bottom: 2.5rem;
 }
 
+h4 {
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 700;
+    color: #27272A;
+    margin-bottom: .5rem;
+    font-size: 22px;
+}
+
 h5 {
     font-weight: 800;
     font-family: 'Montserrat', sans-serif;
@@ -201,30 +209,6 @@ button {
     margin-right: 8px;
 }
 
-/* #upcomingList {
-    overflow-x: auto;
-    white-space: nowrap;
-    display: block;
-    margin-bottom: 4rem;
-}
-
-#popularList {
-    overflow-x: auto;
-    white-space: nowrap;
-    display: block;
-    margin-bottom: 4rem;
-}
-
-.upcomingMovie {
-    display: inline-block;
-    float: none;
-}
-
-.popularMovie {
-    display: inline-block;
-    float: none;
-} */
-
 #searchedMovies .poster {
     margin: 1rem 0;
     position: relative;
@@ -269,6 +253,57 @@ main {
     box-shadow: 0px 0px 15px -2px rgba(0,0, 0,0.30);
 }
 
+#title {
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    font-size: 18px;
+    font-weight: 300;
+    color:rgba(0,0, 0,0.30);
+    font-family: 'Montserrat', sans-serif;
+}
+
+#genres {
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    margin: .8rem 0;
+}
+
+.genre {
+    padding: .5rem .6rem;
+    border-radius: 3px;
+    background-color: #F3F4F6;
+    margin-right: .5rem;
+}
+
+.fa-clock {
+    color: #2563eb;
+    font-size: 18px;
+}
+
+#time {
+    font-size: 18px;
+}
+
+#movieRuntime {
+    font-size: 18px;
+    font-weight: 400;
+}
+
+#movieOverview {
+    color:#616266;
+}
+
+.overviewInfo {
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+}
+
+#providers .col-1 img {
+    width: 100%;
+}
 
 /** Banner **/
 .banner {
