euhm yea it works

--- a/docs/assets/css/style.css
+++ b/docs/assets/css/style.css
@@ -239,6 +239,10 @@ button {
     object-fit: cover;
 }
 
+#watchList .col-2 {
+    margin: .75rem 0;
+}
+
 #watchList .col-2 img {
     width: 100%;
 }
