--- a/docs/assets/css/style.css
+++ b/docs/assets/css/style.css
@@ -63,6 +63,14 @@ a {
     width: 18%;
 }
 
+.col-1 {
+    margin: 0 .65rem 0 0;
+}
+
+.col-1 > img {
+    width: 100%;
+}
+
 /** Header **/
 header {
     width: 100vw;
@@ -317,27 +325,36 @@ main {
 #movieRuntime {
     font-size: 18px;
     font-weight: 400;
+    
 }
 
-#movieOverview {
+#movieOverview > * {
     color:#616266;
+    font-family: 'Roboto', sans-serif;
 }
 
 .overviewInfo {
     display: flex;
     align-items: center;
     justify-content: flex-start;
+    color:#616266;
+    font-family: 'Roboto', sans-serif;
 }
 
 
 .testimonial-group > .row {
     overflow-x: auto;
     white-space: nowrap;
-  }
-  .testimonial-group > .row > .col-2 {
+}
+
+.testimonial-group > .row > .col-2 {
     display: inline-block;
     float: none;
-  }
+}
+
+#whereWatch h4{
+    margin-top: 2rem;
+}
 
 #providers .col-1 img {
     width: 100%;
@@ -383,6 +400,24 @@ main {
 
 .tcontainer .delete {
     color: #ef4444;
+}
+
+#rec h4 {
+    margin-top: 2.5rem;
+}
+
+.col-4 {
+    margin: .8rem 0;
+}
+
+.col-4 img {
+    width: 100%;
+}
+
+#recommendations .col-2 img {
+    width: 100%;
+    border-radius: 4px;
+    box-shadow: 0px 0px 15px -2px rgba(0,0, 0,0.30);
 }
 
 /** Footer **/
